# llm-regress

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml
examples/: rag_pipeline_groq_judge.yaml
llmdiff/: cli.py  judge.py  server.py  storage.py
llmdiff.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
llmdiff/templates/: ui.html
llmregress/: cli.py  config.py  judge.py  runner.py  server.py  storage.py
llmregress/templates/: ui.html
tests/: test_judge.py  test_runner.py  test_storage.py
